#ifndef SERIALIZABLE_H
#define SERIALIZABLE_H

class Serializable {};

#endif